<resources>
    <string name="app_name">AnimalApp</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="settings">Impostazioni</string>
    <string name="Profile">Profilo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string-array name="date_filter_options">
        <item>Tutti</item>
        <item>Oggi</item>
        <item>Ultima Settimana</item>
        <item>Ultimo Mese</item>
        <item>Ultimo Anno</item>
    </string-array>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string-array name="reg_options">
        <item>Proprietario</item>
        <item>Ente</item>
        <item>Veterinario</item>
    </string-array>
    <string-array name="categoria_options">
        <item>Categoria</item>
        <item>Cerco</item>
        <item>Offro</item>
    </string-array>
    <string-array name="proprieta_options">
        <item>Mia proprietà</item>
        <item>In carico</item>
        <item>Assistito</item>
    </string-array>
    <string-array name="lingua_options">
        <item>Lingua</item>
        <item>Italiano</item>
        <item>Inglese</item>
    </string-array>
    <string-array name="relazione_options">
        <item>Non compatibile</item>
        <item>Amici</item>
        <item>Conviventi</item>
    </string-array>
    <string-array name="media_options">
        <item>Testo</item>
        <item>Immagine</item>
        <item>Video</item>
    </string-array>
    <string-array name="ente_options">
        <item>Privato</item>
        <item>Statale</item>
    </string-array>
    <string-array name="appuntamento_options">
        <item>Esame</item>
        <item>Diagnosi</item>
    </string-array>
    <string-array name="statoesame">
        <item>Non eseguito</item>
        <item>Completato</item>
        <item>Da rivedere</item>
    </string-array>
    <string name="diagnosi">Diagnosi </string>
    <string-array name="tipoesame">
        <item>Altro</item>
        <item>Sverminazione</item>
        <item>Vaccinazione</item>
        <item>Sterilizzazione</item>
        <item>Intervento</item>
        <item>Controllo</item>
    </string-array>
    <string-array name="province">
        <item>AG</item>
        <item>AL</item>
        <item>AN</item>
        <item>AO</item>
        <item>AR</item>
        <item>AP</item>
        <item>AT</item>
        <item>AV</item>
        <item>BA</item>
        <item>BT</item>
        <item>BL</item>
        <item>BN</item>
        <item>BG</item>
        <item>BI</item>
        <item>BO</item>
        <item>BZ</item>
        <item>BS</item>
        <item>BR</item>
        <item>CA</item>
        <item>CL</item>
        <item>CB</item>
        <item>CI</item>
        <item>CE</item>
        <item>CT</item>
        <item>CZ</item>
        <item>CH</item>
        <item>CO</item>
        <item>CS</item>
        <item>CR</item>
        <item>KR</item>
        <item>CN</item>
        <item>EN</item>
        <item>FM</item>
        <item>FE</item>
        <item>FI</item>
        <item>FG</item>
        <item>FC</item>
        <item>FR</item>
        <item>GE</item>
        <item>GO</item>
        <item>GR</item>
        <item>IM</item>
        <item>IS</item>
        <item>SP</item>
        <item>AQ</item>
        <item>LT</item>
        <item>LE</item>
        <item>LC</item>
        <item>LI</item>
        <item>LO</item>
        <item>LU</item>
        <item>MC</item>
        <item>MN</item>
        <item>MS</item>
        <item>MT</item>
        <item>ME</item>
        <item>MI</item>
        <item>MO</item>
        <item>MB</item>
        <item>NA</item>
        <item>NO</item>
        <item>NU</item>
        <item>OG</item>
        <item>OT</item>
        <item>OR</item>
        <item>PD</item>
        <item>PA</item>
        <item>PR</item>
        <item>PV</item>
        <item>PG</item>
        <item>PU</item>
        <item>PE</item>
        <item>PC</item>
        <item>PI</item>
        <item>PT</item>
        <item>PN</item>
        <item>PZ</item>
        <item>PO</item>
        <item>RG</item>
        <item>RA</item>
        <item>RC</item>
        <item>RE</item>
        <item>RI</item>
        <item>RN</item>
        <item>RM</item>
        <item>RO</item>
        <item>SA</item>
        <item>VS</item>
        <item>SS</item>
        <item>SV</item>
        <item>SI</item>
        <item>SR</item>
        <item>SO</item>
        <item>TA</item>
        <item>TE</item>
        <item>TR</item>
        <item>TO</item>
        <item>OG</item>
        <item>TP</item>
        <item>TN</item>
        <item>TV</item>
        <item>TS</item>
        <item>UD</item>
        <item>VA</item>
        <item>VE</item>
        <item>VB</item>
        <item>VC</item>
        <item>VR</item>
        <item>VV</item>
        <item>VI</item>
        <item>VT</item>

    </string-array>
    <string name="title_activity_veterinario">Veterinario_Activity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_profilo_segnalazione_senza_modifica">
        Activity_Profilo_Segnalazione_senza_modifica
    </string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="Italiano">Italiano</string>
    <string name="Inglese">Inglese</string>
    <string name="Animali">Animali</string>
    <string name="Miei_animali">Miei animali</string>
    <string name="album_animali">Album animali</string>
    <string name="Crea_animale">Crea animali</string>
    <string name="Cerca_animale">Cerca animali</string>
    <string name="immagine">Immagine</string>
    <string name="testo">Testo</string>
    <string name="orientamento">Orientamento dello schermo</string>
    <string name="lingua1">Lingua</string>
    <string name="chi_siamo">Pagina chi siamo</string>
    <string name="aggiungi_ogg">Aggiungi Oggetto</string>
    <string name="nome1">Nome</string>
    <string name="prezzo">Prezzo</string>
    <string name="quantity">Quantità</string>
    <string name="sel22">Seleziona Lingua</string>
    <string name="orientamento1">Orientamento</string>
    <string name="Date">Data (GG-MM-AAAA)</string>
    <string name="crea_offerta">Crea offerta</string>
    <string name="ins_prov">Inserisci provincia..</string>
    <string name="ins_ogg">Inserisci oggetto..</string>
    <string name="ins_desc">Inserisci descrizione..</string>
    <string name="visible">A chi deve essere visibile:</string>
    <string name="proprietario">Proprietario</string>
    <string name="ente">Ente</string>
    <string name="veterinario">Veterinario</string>
    <string name="crea_segnalazione">Crea segnalazione</string>
    <string name="password_forgot">Password Dimenticata?</string>
    <string name="registrati">Registrati</string>
    <string name="entra_ospite">Oppure entra come ospite:</string>
    <string name="seleziona_file">Seleziona il tipo di File:</string>
    <string name="seleziona2">Seleziona Data</string>
    <string name="ora_inizio2">Orario Inizio</string>
    <string name="prenotazione">Prenotazione</string>
    <string name="calendari_disponibili">Calendari Disponibili</string>
    <string name="appuntamenti">Appuntamenti</string>
    <string name="prenotazioni">Prenotazioni</string>
    <string name="calendario_prenotazione">Calendario Prenotazione</string>
    <string name="save">Salva</string>
    <string name="qrcode">Scansione QR Code:</string>
    <string name="else_">Oppure:</string>
    <string name="qrgene">QR Code generato</string>
    <string name="conf_pass">Conferma Password</string>
    <string name="hai_acc">Hai già un account?</string>
    <string name="Reg_an">Registrazione Animale</string>
    <string name="razza">Razza</string>
    <string name="patologie">Patologie</string>
    <string name="Preferenze_cibo">Preferenze cibo</string>
    <string name="luogo">Luogo</string>
    <string name="sesso">Sesso</string>
    <string name="maschio">maschio</string>
    <string name="femmina">femmina</string>
    <string name="rec_pass">Recupera Password</string>
    <string name="inserisci_mail1">Inserisci email a cui inviare le istruzioni per il recupero della password</string>
    <string name="conf_em">Conferma Email</string>
    <string name="inv_em">Invia Email</string>
    <string name="Area_Veterinario">Area Veterinario</string>
    <string name="segnalazioni">Segnalazioni</string>
    <string name="mie_segn">Mie Segnalazioni</string>
    <string name="r_s">Ricerca Segnalazioni</string>
    <string name="offerte">Offerte</string>
    <string name="crea_off">Crea Offerta</string>
    <string name="mie_off">Mie Offerte</string>
    <string name="ric_off">Ricerca Offerte</string>
    <string name="crea_se">Crea Segnalazione</string>
    <string name="appuntamento">Appuntamento</string>
    <string name="data_pre">Data prenotazione</string>
    <string name="animale">Animale</string>
    <string name="Diagnosi">Diagnosi</string>
        <string name="modifica_foto">Modifica foto</string>
        <string name="oggetto">Oggetto</string>
        <string name="descrizione">Descrizione</string>
    <string name="Modifica">Modifica</string>
    <string name="ins_r">Inserisci la ragione sociale..</string>
    <string name="ins_ss">Inserisci la sede legale</string>
    <string name="ins_p">Inserisci la partita iva</string>
    <string name="ins_n">Inserisci Nome...</string>
    <string name="ins_c">Inserisci Cognome...</string>
    <string name="cogn1">Cognome </string>
    <string name="ins_cf">Inserisci Codice Fiscale...</string>
    <string name="ins_ts">Inserisci il titolo di studio</string>
    <string name="ituoiani">I tuoi animali </string>
    <string name="album">Album</string>
    <string name="scannerizza">Scannerizza ora</string>
    <string name="Annunci">Annunci</string>
    <string name="statoes">Stato Esame</string>
    <string name="tipoes">Tipo Esame</string>
    <string name="insnomeim">Inserire nome dell Immagine</string>
    <string name="annullap">Annulla prenotazione</string>
    <string name="rela">Relazione </string>
    <string name="non_compatibile">Non compatibile</string>
    <string name="amici">Amici</string>
    <string name="conviventi">Conviventi</string>
    <string name="rsnp">Ragione Sociale non presente</string>
    <string name="tipnp">Tipo non presente</string>
    <string name="sedelegnp">Sede legale non presente</string>
    <string name="pnp">Partita iva non presente</string>
    <string name="nomenp">Nome non presente</string>
    <string name="cognomenp">Cognome non presente</string>
    <string name="codfnp">Codice Fiscale non presente</string>
    <string name="nomedc">Nome da compilare</string>
    <string name="cogndc">Cognome da compilare</string>
    <string name="cfdc">Codice fiscale da compilare</string>
    <string name="cf">Codice Fiscale</string>
    <string name="emdc">Email da compilare</string>
    <string name="offerta">Offerta</string>
    <string name="condividi">Condividi</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="lingua">Lingua</string>
</resources>