<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <group android:checkableBehavior="single">
            <item android:id="@+id/profile"
                android:icon="@drawable/ic_profile2"
                android:title="@string/Profile"/>
            <item
                android:icon="@drawable/ic_offer"
                android:id="@+id/offerta"
                android:title="@string/offerta"/>
            <item
                android:icon="@drawable/ic_search"
                android:id="@+id/search"
                android:title="Cerca"/>

        </group>
    <item android:title="Communicate">
        <menu>
    <item
        android:icon="@drawable/ic_share"
        android:id="@+id/share"
        android:title="@string/condividi"/>

    <item
        android:icon="@drawable/ic_baseline_settings_24"
        android:id="@+id/setting"
        android:title="@string/impostazioni"/>

    <item
        android:icon="@drawable/ic_lingua"
        android:id="@+id/lingua"
        android:title="@string/lingua"/>

    <item
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:id="@+id/logout"
        android:title="Logout"/>

        </menu>
    </item>
</menu>