<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar1"
        layout="@layout/toolbar" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar1" />

    <TextView
        android:id="@+id/animali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/Animali"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline66"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/guideline63" />

    <TextView
        android:id="@+id/Mezzalunasx"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/custom_button_v11"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/guideline66" />

    <TextView
        android:id="@+id/Miei_animali"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_v4"
        android:drawableLeft="@drawable/baseline_pets_24"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/Miei_animali"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/album_animali"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/Mezzalunasx" />

    <TextView
        android:id="@+id/album_animali"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_v4"
        android:drawableLeft="@drawable/baseline_photo_album_24"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/album_animali"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/crea_animale"
        app:layout_constraintEnd_toEndOf="@+id/Miei_animali"
        app:layout_constraintStart_toStartOf="@id/Miei_animali"
        app:layout_constraintTop_toBottomOf="@id/Miei_animali" />

    <TextView
        android:id="@+id/crea_animale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_v4"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/Crea_animale"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/round_add_24"
        app:layout_constraintBottom_toBottomOf="@+id/cerca_animale"
        app:layout_constraintEnd_toEndOf="@+id/Miei_animali"
        app:layout_constraintStart_toStartOf="@id/Miei_animali"
        app:layout_constraintTop_toBottomOf="@id/album_animali" />

    <TextView
        android:id="@+id/cerca_animale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_v4"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/Cerca_animale"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@+id/Mezzalunasx"
        app:layout_constraintEnd_toEndOf="@+id/Miei_animali"
        app:layout_constraintStart_toStartOf="@id/Miei_animali"
        app:layout_constraintTop_toBottomOf="@id/crea_animale" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/b45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/b55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.58" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/b95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />


</androidx.constraintlayout.widget.ConstraintLayout>